@@ -1,0 +1,2 @@
+require 'spec/mocks/extensions/object'
+require 'spec/mocks/extensions/class'
