@@ -1,5 +1,5 @@
 require File.join(File.dirname(__FILE__), *%w[helper])
 
-["example_groups","interop"].each do |dir|
+%w[example_groups interop mock_framework_integration].each do |dir|
   require File.join(File.dirname(__FILE__), "#{dir}/stories")
 end
